[gd_scene load_steps=29 format=3 uid="uid://dok8g2fmkc556"]

[ext_resource type="Script" uid="uid://tduvhue5m3a3" path="res://entities/player.gd" id="1_6nm46"]
[ext_resource type="Texture2D" uid="uid://ny366n4xxy0e" path="res://Assets/Assets_Externos/Sprite Pack 6/1 - Penguin/Falling (16 x 16).png" id="1_qsoyl"]
[ext_resource type="Texture2D" uid="uid://b73oxmm3da3i7" path="res://Assets/Assets_Externos/Sprite Pack 6/1 - Penguin/Idle (16 x 16).png" id="1_rfe5m"]
[ext_resource type="Texture2D" uid="uid://d0tlk1vikcbsx" path="res://Assets/Assets_Externos/Sprite Pack 6/1 - Penguin/Hurt (16 x 16).png" id="2_6nm46"]
[ext_resource type="PackedScene" uid="uid://c1vn0akhyen1q" path="res://scenes/objects_system/dialogue_balloon.tscn" id="2_i623q"]
[ext_resource type="Texture2D" uid="uid://cn8fh767eis5u" path="res://Assets/Assets_Externos/Sprite Pack 6/1 - Penguin/Jump (16 x 16).png" id="2_qly61"]
[ext_resource type="Texture2D" uid="uid://buqbi8a81mxes" path="res://Assets/Assets_Externos/Sprite Pack 6/1 - Penguin/Belly_Sliding (16 x 16).png" id="3_qsoyl"]
[ext_resource type="Texture2D" uid="uid://c4h7bdl4sldwk" path="res://Assets/Assets_Externos/Sprite Pack 6/1 - Penguin/Waddling (16 x 16).png" id="4_6nm46"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i623q"]
radius = 6.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_i623q"]
atlas = ExtResource("1_qsoyl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fruft"]
atlas = ExtResource("2_6nm46")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef06p"]
atlas = ExtResource("1_rfe5m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdhl"]
atlas = ExtResource("1_rfe5m")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x08pd"]
atlas = ExtResource("1_rfe5m")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dchgp"]
atlas = ExtResource("1_rfe5m")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgjc"]
atlas = ExtResource("1_rfe5m")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0i8f"]
atlas = ExtResource("2_qly61")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i614"]
atlas = ExtResource("3_qsoyl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprnr"]
atlas = ExtResource("3_qsoyl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rie4"]
atlas = ExtResource("3_qsoyl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3pk"]
atlas = ExtResource("4_6nm46")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgp7q"]
atlas = ExtResource("4_6nm46")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8aq"]
atlas = ExtResource("4_6nm46")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s6d"]
atlas = ExtResource("4_6nm46")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicqb"]
atlas = ExtResource("4_6nm46")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0ki"]
atlas = ExtResource("4_6nm46")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fruft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i623q")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef06p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x08pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dchgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgjc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0i8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i614")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rie4")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_slxql"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 25
script = ExtResource("1_6nm46")
dialogue_balloon_scene = ExtResource("2_i623q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_i623q")

[node name="Skin" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fruft")
animation = &"idle"
autoplay = "idle"

[node name="Particles" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_slxql")

[node name="JumpPouwerUi" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="JumpPouwerUi"]
offset_right = 1.0
offset_bottom = 11.0
color = Color(0.08468992, 0.08468992, 0.08468992, 1)

[node name="Fill" type="ColorRect" parent="JumpPouwerUi"]
offset_right = 1.0
offset_bottom = 11.0
color = Color(1, 0.060000002, 0.060000002, 1)

[node name="DigalogBallom" type="Marker2D" parent="."]
position = Vector2(-36, -61)

[node name="Souds" type="Node" parent="."]

[node name="fx_jump" type="AudioStreamPlayer" parent="Souds"]

[node name="fx_damage" type="AudioStreamPlayer" parent="Souds"]

[node name="fx_teleport" type="AudioStreamPlayer" parent="Souds"]

[node name="Audio" type="Node" parent="."]

[node name="ASPJump" type="AudioStreamPlayer2D" parent="Audio"]

[node name="ASPDamage" type="AudioStreamPlayer2D" parent="Audio"]

[node name="ASPTeleport" type="AudioStreamPlayer2D" parent="Audio"]
